Adding video about Sparrow and Craig Raw